--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>Alura Plus</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale "
+        <meta name="viewport" content="width=device-width, initial-scale ">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body></body>
